--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
-/vendor/
-node_modules/
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.idea
+/.vscode
 
 # Laravel 4 specific
 bootstrap/compiled.php
@@ -15,9 +26,7 @@ public/hot
 public_html/storage
 public_html/hot
 
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+
